# Own

./: .gitignore  README.md  pyproject.toml
src/own/: __init__.py  calculator.py  converters.py  data_structures.py  string_utils.py  validators.py
src/own.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculator.py  test_converters.py  test_data_structures.py  test_string_utils.py  test_validators.py
